--- a/BrowserTest.html
+++ b/BrowserTest.html
@@ -11,6 +11,7 @@
 <script>mocha.setup('bdd')</script>
 <script src="node_modules/nclosure/third_party/closure-library/closure/goog/base.js"></script>
 <script src="remobidDeps.js"></script>
+<script src="test/unit/common/storage/localstorage.js"></script>
 <script src="test/browser/common/storage/localstorage.js"></script>
 <script>
     mocha.run();
