--- a/BrowserTest.html
+++ b/BrowserTest.html
@@ -27,6 +27,7 @@
 <script src="test/unit/common/model/modelBase.js"></script>
 <script src="test/unit/common/storage/localstorage.js"></script>
 <script src="test/unit/common/cache/localcache.js"></script>
+<script src="test/unit/common/model/collection.js"></script>
 <script>
     goog.Timer.defaultTimerObject = this;
     var mockClock = new goog.testing.MockClock(true);
